# fellowship-of-the-whale

./: .gitignore  Cargo.toml  README.md  \  readme.md
.github/workflows/: rust.yml
actix-api/: Cargo.toml  post.json
actix-api/src/: main.rs
actix-api/src/handlers/: echo.rs  mod.rs  posts.rs
src/: main.rs
src/components/: team.rs
src/pages/: about_us.rs  calendar.rs  donate.rs  mod.rs  posts.rs  teams.rs
static/: index.scss
types/: Cargo.toml
types/src/: lib.rs
yew-ui/: Cargo.toml  index.html  package.json
yew-ui/src/: .env  main.rs
yew-ui/src/components/: mod.rs  post_card.rs  team.rs
yew-ui/src/pages/: about_us.rs  contact.rs  documents.rs  echo.rs  home.rs  mod.rs  page_not_found.rs  post.rs  posts.rs  press.rs  sponsors.rs  teams.rs
yew-ui/src/services/: echo.rs  fetch.rs  future.rs  mod.rs
