[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-web = "^4"
types = { path= "../types"}
actix-files = "0.6"
derive_more = "0.99.17"
chrono = "0.4.19"
log = "0.4.17"
serde = "1.0.140"
mysql = "22.2.0"
