[package]
name = "yew-ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8.2"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = "0.19"
yew-router = "0.16"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"
gloo = "0.8"
types = { path= "../types"}
wasm-bindgen-futures = "0.4"
reqwasm = "0.5"
wasm-bindgen = "0.2"
web-sys ="0.3"