[package]
name = "yew-ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
wasm-logger = "0.2"
yew = "0.19"
yew-router = "0.16"
serde = { version = "1.0", features = ["derive"] }
types = { path= "../types"}
wasm-bindgen-futures = "0.4"
reqwasm = "0.5"
wasm-bindgen = "0.2"
web-sys ="0.3"
